<resources>
    <string name="app_name">MTA Compiler &amp; Script editor</string>
    <string name="action_settings">Settings</string>
    <string name="tab_text_1">Main</string>
    <string name="tab_text_2">Text editor</string>
    <string name="tools_title">Settings</string>
    <string name="about_title">About</string>
    <string name="shows_image">Shows current image</string>

    <string name="buttons_main">Main button</string>
    <string name="open_file">Open file / archive</string>
    <string name="compile_files">Compile files</string>
    <string name="file_code_shows_there">The file text display here…</string>
    <string name="copy_button">Copy button</string>
    <string name="save_button">Save button</string>
    <string name="close_button">Close button</string>
    <string name="zip_files">Zip files</string>
    <string name="background_image">Background image</string>
    <string name="opened_files_shows_here">Opened files will show up here</string>
    <string name="save_file_name">The name of the saved file:</string>
    <string name="save_settings">Save settings</string>
    <string name="loading">Loading…\u0020</string>
    <string name="download_failed">Files download failed!</string>
    <string name="download_successful">Download complete! Files processed:\u0020</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="can_not_write_values">Unable to write values: invalid characters in values!</string>
    <string name="settings_saved">Settings saved!</string>
    <string name="unwritable_storage">The current directory is unwritable!</string>
    <string name="error_init_directory">Directory creation error! Clear the cache of the MTACSE directory.</string>
    <string name="error_unpack">Archive unpack error!</string>
    <string name="error_pack">Files packing error!</string>
    <string name="error_open">Error opening file!</string>
    <string name="code_copied">The code copied to the clipboard!</string>
    <string name="text_field_cleaned">The text field is cleared!</string>
    <string name="open_exists_dir">Opened existing directory:\u0020</string>
    <string name="unpacked_successfully">Unpacked into:\u0020</string>
    <string name="packed_successfully">Successfully packed in Documents!</string>
    <string name="file_saved">File saved:\u0020</string>
    <string name="content_loaded">Data uploaded successfully!</string>
    <string name="dir_path_not_found">The path to the directory was not found! Open the file / archive.</string>
    <string name="undo_button">Undo</string>
    <string name="redo_button">Redo</string>
    <string name="crypto_agreement">Cryptographic Agreement</string>
    <string name="crypto_agreement_text">This product contains a cryptographic algorithm to obfuscate Lua scripts, you agree that you have the legal right to use crypto exported from the US?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="find">Find…</string>
    <string name="choose_syntax">Choose syntax…</string>
    <string name="nothing_found">No more found!</string>
    <string name="clear_cache">Clear MTACSE directory cache</string>
    <string name="cache_cleared">MTACSE cache cleared!</string>
    <string name="app_version">\nVersion:\u0020</string>
    <string name="app_build">\nBuild:\u0020</string>
    <string name="links">\nWebsite: https://limedev.ru\nVK community: https://vk.com/limedev\nPrivacy policy: http://limedev.ru/mtacse/privacy-policy.php</string>
    <string name="image">Image</string>
    <string name="sound">Sound</string>
    <string name="code">Code</string>
    <string name="unknown_format">\u003F</string>
    <string name="error_compile">Encryption error! Maybe, your Android version can not support this encryption.</string>

    <array name="syntax_array">
        <item>Script (.lua)</item>
        <item>Meta (.xml)</item>
        <item>Editor Definition File (.edf)</item>
        <item>Shader (.fx)</item>
        <item>Map (.map)</item>
        <item>Without highlighting</item>
    </array>
    <array name="sizes_array">
        <item>B</item>
        <item>KB</item>
        <item>MB</item>
        <item>GB</item>
        <item>TB</item>
        <item>EB</item>
    </array>
</resources>
